Bug 479590 - Don't show reply or thread buttons when hovering over a message if you can't send messages in the channel
Summary: Don't show reply or thread buttons when hovering over a message if you can't ...
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-10 01:50 UTC by Justin Zobel
Modified: 2024-01-13 12:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2024-01-10 01:50:54 UTC
SUMMARY
I'm in a channel that's read-only and NeoChat appropriately greys out the input field however when I hover over a message I still get buttons to reply, start a thread or react.

Reply and thread obviously do nothing, but the react button does work. So it appears it should just hide the reply and thread buttons as they aren't useable.

STEPS TO REPRODUCE
1. Be in a channel that doesn't accept messages from you
2. Hover over a message
3. Try all the buttons

OBSERVED RESULT
Reply and start a thread don't work, react does

EXPECTED RESULT
Only buttons that can be used are visible

Operating System: Solus 4.5
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.112.0
Qt Version: 5.15.11
Kernel Version: 6.6.9-269.current (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 PRO 4750U with Radeon Graphics
Memory: 29.1 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 20Y1001SAU
System Version: ThinkPad P14s Gen 1
Comment 1 Bug Janitor Service 2024-01-11 18:36:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1517
Comment 2 James Graham 2024-01-12 01:59:14 UTC
Git commit ec4aa73e371dffc5c40ce438222537c08855c00f by James Graham.
Committed on 12/01/2024 at 02:59.
Pushed by nvrwhere into branch 'master'.

Readonly Room

Add readonly property to a room and use it to decide whether to show chatbar, replies and edits

M  +6    -0    src/neochatroom.cpp
M  +8    -0    src/neochatroom.h
M  +3    -1    src/qml/HoverActions.qml
M  +1    -1    src/qml/RoomPage.qml

https://invent.kde.org/network/neochat/-/commit/ec4aa73e371dffc5c40ce438222537c08855c00f
Comment 3 James Graham 2024-01-13 12:06:06 UTC
Git commit b593f7321b7feef20e080c3b04d86f4b2cf5c37f by James Graham.
Committed on 13/01/2024 at 13:06.
Pushed by nvrwhere into branch 'release/24.02'.

Cherrypick 24.02 Readonly Room

Add readonly property to a room and use it to decide whether to show chatbar, replies and edits


(cherry picked from commit ec4aa73e371dffc5c40ce438222537c08855c00f)

M  +6    -0    src/neochatroom.cpp
M  +8    -0    src/neochatroom.h
M  +3    -1    src/qml/HoverActions.qml
M  +1    -1    src/qml/RoomPage.qml

https://invent.kde.org/network/neochat/-/commit/b593f7321b7feef20e080c3b04d86f4b2cf5c37f