Cherrypick 24.02 Readonly Room

Add readonly property to a room and use it to decide whether to show chatbar, replies and edits

BUG: 479590


(cherry picked from commit ec4aa73e371dffc5c40ce438222537c08855c00f)